--- a/NasBertApp/Views/MainView.xaml
+++ b/NasBertApp/Views/MainView.xaml
@@ -103,8 +103,21 @@
                     <StackPanel Orientation="Horizontal">
                         <emoji:TextBlock Text="{Binding ResultClass}"
                                HorizontalAlignment="Left" VerticalAlignment="Center"
-                               FontWeight="Bold" Margin="0,10,0,0" FontSize="20"
-                                />
+                               FontWeight="Bold" Margin="0,10,0,0" FontSize="20">
+                            <emoji:TextBlock.Style>
+                                <Style TargetType="{x:Type emoji:TextBlock}">
+                                    <Setter Property="Foreground" Value="Black" />
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding ResultClass}" Value="Negative 😩">
+                                            <Setter Property="Foreground" Value="Red" />
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding ResultClass}" Value="Positive 🤗">
+                                            <Setter Property="Foreground" Value="GreenYellow" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </emoji:TextBlock.Style>
+                        </emoji:TextBlock>
                         <TextBlock Text="{Binding MaxScore, StringFormat={}{0:N2}%}"
                                Visibility="{Binding ResultVisibled, Converter={StaticResource BooleanToVisibilityConverter}}"
                                HorizontalAlignment="Left" VerticalAlignment="Center"
